// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusItems snapshot tests should render a single status item correctly 1`] = `
<div
  className="status-items"
>
  <StatusItem
    key="0"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598832480,
      }
    }
  />
</div>
`;

exports[`StatusItems snapshot tests should render empty status items correctly 1`] = `
<div
  className="status-items"
/>
`;

exports[`StatusItems snapshot tests should render multiple status items correctly 1`] = `
<div
  className="status-items"
>
  <StatusItem
    key="0"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="1"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Unit selected",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="2"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Waiting for subsidy inspection",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="3"
    statusItem={
      Object {
        "comment": null,
        "status": "Waitlisted",
        "substatus": "Written confirmation sent",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="4"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="5"
    statusItem={
      Object {
        "comment": null,
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1598832480,
      }
    }
  />
</div>
`;

exports[`StatusItems snapshot tests should render multiple status items with limit 0 correctly 1`] = `
<div
  className="status-items"
/>
`;

exports[`StatusItems snapshot tests should render multiple status items with limit 1 correctly 1`] = `
<div
  className="status-items"
>
  <StatusItem
    key="0"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598832480,
      }
    }
  />
</div>
`;

exports[`StatusItems snapshot tests should render multiple status items with limit 100 correctly 1`] = `
<div
  className="status-items"
>
  <StatusItem
    key="0"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Approval letter sent",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="1"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Unit selected",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="2"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Approved",
        "substatus": "Waiting for subsidy inspection",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="3"
    statusItem={
      Object {
        "comment": null,
        "status": "Waitlisted",
        "substatus": "Written confirmation sent",
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="4"
    statusItem={
      Object {
        "comment": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.",
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1598832480,
      }
    }
  />
  <StatusItem
    key="5"
    statusItem={
      Object {
        "comment": null,
        "status": "Lease Signed",
        "substatus": null,
        "timestamp": 1598832480,
      }
    }
  />
</div>
`;
